js/js.translator/testData/incremental/invalidation/moveExternalDeclarationsBetweenJsModules/lib1/JsModuleB.2.kt
@file:JsModule("js-module-b-new")

external fun externalDemoFunction(): Int
